--- a/index.html
+++ b/index.html
@@ -16,7 +16,4 @@ layout: default
 </ul>
 
 <h3>Random post</h3>
-{% assign randomPost = collections.notes | getRandom %}
-You may also enjoy: <a href="{{randomPost.url}}">{{ randomPost.data.title }}</a>
-
-</div>
+{% include "random-post.html" %}
