tried to add recaps

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@ layout: default
 
 <h1>Links</h1>
 
+<h2>Latest Session:</h2>
+{% for post in collections.detailedNotes limit: 5 %}
+  <li>
+    <a href="{{post.url}}" title="{{post.title}}">
+      {{post.data.sessionTitle | replace: '-', ' '}}
+    </a>
+  </li>
+{% endfor %}
+
+
 <h3>Latest sessions:</h3>
 <ul>
   {% for post in collections.sessions limit: 10 %}
